--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Title</title>
 </head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <body>
     <p>Hello, </p>
 </body>
