close tag for input

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
         <div class="modal-content">
             <h4>New genre</h4>
             <div class="input-field">
-                <input id="newGenreName" type="text" class="validate">
+                <input id="newGenreName" type="text" class="validate"></input>
                 <label for="newGenreName">Name</label>
             </div>
         </div>
