feature to delete genres

--- a/src/main/resources/templates/fragments/main_head.html
+++ b/src/main/resources/templates/fragments/main_head.html
@@ -8,5 +8,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/icons.css"/>
 </head>
 </html>
