adjusted width of elements

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,23 +10,27 @@
 
     <div class="row">
 
-    <!-- Genres list -->
-    <ul id="genres" class="collection genres col s12 m2 l2">
-        <li th:each="genre: ${genres}" class="collection-item">
-            <div>
-                <span th:text="${genre.name}"></span>
-                <a onclick="deleteGenre(this)" href="#!" class="secondary-content"><i class="material-icons md-dark">clear</i></a>
-            </div>
-        </li>
-        <li class="collection-item">
-            <a class="waves_effect waves-light btn modal-trigger" href="#newGenre">New</a>
-        </li>
-    </ul>
+        <!-- Genres list -->
+        <div class="col s12 m4 l3">
+            <ul id="genres" class="collection genres">
+                <li th:each="genre: ${genres}" class="collection-item">
+                    <div>
+                        <span th:text="${genre.name}"></span>
+                        <a onclick="deleteGenre(this)" href="#!" class="secondary-content"><i
+                                class="material-icons md-dark">clear</i></a>
+                    </div>
+                </li>
+                <li class="collection-item">
+                    <a class="waves_effect waves-light btn modal-trigger" href="#newGenre">New</a>
+                </li>
+            </ul>
+        </div>
 
 
-    <!-- Channels and schedules -->
+        <!-- Channels and schedules -->
+        <div class="col s12 m8 l9">
 
-
+        </div>
 
     </div>
 
@@ -42,7 +46,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a onclick="addGenre(this)" href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">ADD</a>
+                <a onclick="addGenre(this)" href="#!"
+                   class="modal-action modal-close waves-effect waves-green btn-flat">ADD</a>
             </div>
         </div>
     </div>
