--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,19 @@
 
         <!-- Channels and schedules -->
         <div class="col s12 m8 l9">
-
+            <div th:each="channel: ${channels}">
+                <h5 th:text="${channel.name}"></h5>
+                <div class="row">
+                    <div class="col s12 m4 l3 daySchedule" th:each="day, iter: ${weekDays}">
+                        <h6 th:text="${day}"></h6>
+                        <div style="height: 2px" class="teal"></div>
+                        <div class="card-panel small" th:each="show : ${channel.schedule.shows}"
+                             th:if="${iter.index == show.dayOfWeek}">
+                                <span th:text="${show.name}"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
