--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -117,7 +117,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"
         integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i"
         crossorigin="anonymous"></script>
-
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script>
     $(document).ready(function () {
@@ -151,7 +150,7 @@
         $.get("/genres", function (data) {
             var genresSelect = $('#newShowGenreSelect');
             $.each(data, function (key, genre) {
-                var newRow = "<option value='" + genre.name + "'>" + genre.name + "</option>";
+                var newRow = '<option value="' + genre.name + '">' + genre.name + '</option>';
                 genresSelect.append(newRow);
             });
             $('select').material_select();
