feature to add channels

--- a/src/main/resources/templates/fragments/channels.html
+++ b/src/main/resources/templates/fragments/channels.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<div th:each="channel: ${channels}" th:fragment="channel" class="channel">
-    <span th:text="${channel.id}" class="hide"></span>
+<div th:each="channels: ${channels}" th:fragment="channels" class="channel">
+    <span th:text="${channels.id}" class="hide"></span>
     <div class="row vertalign-wrapper">
-        <h5 th:text="${channel.name}" class="left"></h5>
+        <h5 th:text="${channels.name}" class="left"></h5>
         <div class="row vertalign-center">
             <a class="waves-effect waves-light btn modal-trigger right" onclick="newShow(this)"
                href="#newShow"><i
@@ -19,15 +19,18 @@
         <div class="col s12 m4 l3 daySchedule" th:each="day, iter: ${weekDays}">
             <h6 th:text="${day}"></h6>
             <div style="height: 2px" class="teal"></div>
-            <div class="card" th:each="show : ${channel.schedule.shows}"
-                 th:if="${iter.index == show.dayOfWeek}">
-                <div class="card-content">
-                    <i onclick="deleteShow(this)" class="material-icons right">close</i>
-                    <span th:text="${show.id}" class="hide"></span>
-                    <span th:text="${show.name}"></span><br/>
-                    <span th:text="${show.getFormattedTime(show.startTime)}"></span>
-                    <span> - </span>
-                    <span th:text="${show.getFormattedTime(show.endTime)}"></span>
+            <div th:if="${channels.schedule != null and channels.schedule.shows != null}">
+                <div class="card"
+                     th:if="${iter.index == show.dayOfWeek}"
+                     th:each="show : ${channels.schedule.shows}">
+                    <div class="card-content">
+                        <i onclick="deleteShow(this)" class="material-icons right">close</i>
+                        <span th:text="${show.id}" class="hide"></span>
+                        <span th:text="${show.name}"></span><br/>
+                        <span th:text="${show.getFormattedTime(show.startTime)}"></span>
+                        <span> - </span>
+                        <span th:text="${show.getFormattedTime(show.endTime)}"></span>
+                    </div>
                 </div>
             </div>
         </div>
