--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,6 +7,9 @@
 <nav th:fragment="header">
     <div class="nav-wrapper">
         <a href="#" class="brand_logo">Tv Program</a>
+        <ul class="right">
+            <li><a class="modal-trigger" href="#newChannel">New channel</a></li>
+        </ul>
     </div>
 </nav>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
